# verse-auth-service

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/mailing/: mailer.rs
src/repo/: mod.rs
src/repo/tokens/: model.rs  repo.rs
src/repo/users/: mod.rs  model.rs  payload.rs  repo.rs
src/routes/: config.rs  mod.rs
src/routes/auth/: config.rs  login.rs  mod.rs  register.rs  tokens.rs  verify_email.rs
src/routes/users/: config.rs  me.rs  mod.rs
